[gd_scene load_steps=4 format=3 uid="uid://bu1k8x4584euu"]

[ext_resource type="Script" path="res://scenes/enemies/shopper.gd" id="1_5cvwr"]
[ext_resource type="Texture2D" uid="uid://cagdyrcxr571p" path="res://icon.svg" id="2_tp504"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4u4yc"]
size = Vector2(40, 40)

[node name="Shopper" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_5cvwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4u4yc")

[node name="CollisionDetectors" type="Node2D" parent="."]

[node name="N" type="Node2D" parent="CollisionDetectors"]

[node name="NNW" type="RayCast2D" parent="CollisionDetectors/N"]
target_position = Vector2(-20, -27)
collision_mask = 5

[node name="NNE" type="RayCast2D" parent="CollisionDetectors/N"]
target_position = Vector2(20, -27)
collision_mask = 5

[node name="E" type="Node2D" parent="CollisionDetectors"]

[node name="ENE" type="RayCast2D" parent="CollisionDetectors/E"]
target_position = Vector2(27, -20)
collision_mask = 5

[node name="ESE" type="RayCast2D" parent="CollisionDetectors/E"]
target_position = Vector2(27, 20)
collision_mask = 5

[node name="S" type="Node2D" parent="CollisionDetectors"]

[node name="SSE" type="RayCast2D" parent="CollisionDetectors/S"]
target_position = Vector2(20, 27)
collision_mask = 5

[node name="SSW" type="RayCast2D" parent="CollisionDetectors/S"]
target_position = Vector2(-20, 27)
collision_mask = 5

[node name="W" type="Node2D" parent="CollisionDetectors"]

[node name="WNW" type="RayCast2D" parent="CollisionDetectors/W"]
target_position = Vector2(-27, -20)
collision_mask = 5

[node name="WSW" type="RayCast2D" parent="CollisionDetectors/W"]
target_position = Vector2(-27, 20)
collision_mask = 5

[node name="ChangeDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("2_tp504")

[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
